--- a/learn/flash-attention/flash-attention.html
+++ b/learn/flash-attention/flash-attention.html
@@ -176,6 +176,34 @@
       letter-spacing: 0.03em;
     }
 
+    .nav-link-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 10px 18px;
+      background: var(--surface2);
+      color: var(--text);
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      font-size: 0.9rem;
+      font-weight: 500;
+      text-decoration: none;
+      transition: all 0.2s;
+      font-family: var(--font-sans);
+      margin-top: 16px;
+    }
+
+    .nav-link-btn:hover {
+      background: var(--accent);
+      border-color: var(--accent);
+      color: #fff;
+    }
+
+    .nav-link-btn::after {
+      content: '\2192';
+      font-size: 1.1em;
+    }
+
     canvas {
       width: 100%;
       border: 1px solid var(--border);
@@ -266,6 +294,7 @@
       <h1>Flash Attention</h1>
       <p>Data movement between HBM and on-chip SRAM during Flash Attention (Dao et al. 2022). Score and probability
         matrices never leave SRAM — every float transferred is tallied.</p>
+      <a href="standard-attention.html" class="nav-link-btn">Compare with Standard Attention</a>
     </header>
 
     <section>
