--- a/learn/flash-attention/standard-attention.html
+++ b/learn/flash-attention/standard-attention.html
@@ -176,6 +176,34 @@
       letter-spacing: 0.03em;
     }
 
+    .nav-link-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 10px 18px;
+      background: var(--surface2);
+      color: var(--text);
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      font-size: 0.9rem;
+      font-weight: 500;
+      text-decoration: none;
+      transition: all 0.2s;
+      font-family: var(--font-sans);
+      margin-top: 16px;
+    }
+
+    .nav-link-btn:hover {
+      background: var(--accent);
+      border-color: var(--accent);
+      color: #fff;
+    }
+
+    .nav-link-btn::after {
+      content: '\2192';
+      font-size: 1.1em;
+    }
+
     canvas {
       width: 100%;
       border: 1px solid var(--border);
@@ -237,6 +265,7 @@
       <h1>Standard Attention</h1>
       <p>Data movement between HBM and on-chip SRAM during standard self-attention. Watch how every float is shuttled
         through the 4 memory controller lanes, square by square.</p>
+      <a href="flash-attention.html" class="nav-link-btn">Compare with Flash Attention</a>
     </header>
 
     <section>
